# evi

./: .gitignore  CMakeLists.txt  EVI_RULES.md  LICENSE  README.md  evi.csproj  run.sh  tsconfig.json
engine/: app.cpp  app.h  bindings.cpp  bindings.h  hot_reload.cpp  hot_reload.h  main.cpp  renderer.cpp  renderer.h  runtime.cpp  runtime.h  skia_renderer.cpp
framework/: widgets.ts
framework/app/: run_app.ts
framework/core/: widget.ts
framework/layout/: measure.ts
framework/native/: native_bridge.ts
framework/render/: render.ts
framework/utils/: colors.ts
framework/widgets/: nodes.ts
scripts/: app.ts
src/androidMain/Host/: AndroidBridge.cs  AndroidHost.cs
src/commonMain/: EviApp.cs
src/commonMain/CLI/: EviCli.cs
src/commonMain/Components/: Alignment.cs  AppBar.cs  Button.cs  Center.cs  Column.cs  Container.cs  Expanded.cs  FloatingActionButton.cs  Navigator.cs  Row.cs  Scaffold.cs  Text.cs  TextField.cs
src/commonMain/Core/: BoxShadow.cs  Color.cs  Component.cs  Element.cs  HoverManager.cs  PointerManager.cs  RenderNode.cs  StatefulComponent.cs
src/commonMain/Core/Events/: KeyEvent.cs  PointerEvent.cs
src/commonMain/Host/: AppHost.cs  WebHost.cs
src/commonMain/Rendering/: IRenderer.cs  SkiaRenderer.cs
src/iosMain/Host/: IosBridge.cs  IosHost.cs
src/macosMain/Host/: MacHost.cs
